--- a/web/src/style/Header.css
+++ b/web/src/style/Header.css
@@ -31,6 +31,19 @@ img {
     display: block;
 }
 
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #999999;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: #999999;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: #999999;
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: #999999;
+}
+
 .container {
     width: 1200px;
     margin: 0 auto;
