--- a/web/src/style/Header.css
+++ b/web/src/style/Header.css
@@ -96,7 +96,7 @@ div.Header input[type=text] {
     border-radius: 20px;
     height: 38px;
     border: 0;
-    padding-left: 36px;
+    padding-left: 25px;
     font-size: 15px;
     line-height: 24px;
     color: #999999;
@@ -701,4 +701,17 @@ div.datasets-details:first-child {
 
 .note {
     margin-top: 5px;
+}
+
+.search-results-header {
+    padding: 12px 30px;
+}
+
+.dataset-row-price {
+    margin-top: 13px;
+}
+
+.form-ul  {
+    list-style: disc;
+    margin-left: 20px;
 }
