--- a/web/src/style/Header.css
+++ b/web/src/style/Header.css
@@ -698,6 +698,7 @@ div.datasets-details:first-child {
     font-size: 16px;
     line-height: 24px;
     color: #F3A815;
+    cursor: pointer;
 }
 
 .tag-container {
