--- a/web/src/style/Header.css
+++ b/web/src/style/Header.css
@@ -68,6 +68,7 @@ div#root {
 
 div.Header {
     height: 60px;
+    min-height: 60px;
     width: 100%;
     padding: 0 20px;
     background-color: #F3A815;
