--- a/web/src/style/Header.css
+++ b/web/src/style/Header.css
@@ -890,6 +890,7 @@ div.datasets-details:first-child {
     flex-direction: column;
 }
 
+.spinner-span { padding-right: 10px; }
 
 @media only screen and (max-width: 600px) {
 
